--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "mqtt": "^4.3.7",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
