--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0",
     "vuex-persist": "^3.1.3"
